--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="O_Header">
       <nav>
         <a href="pages/about.html">о медиа</a>
         <a href="pages/aboutUs.html">о нас</a>
@@ -48,22 +48,45 @@
         <a href="pages/interact.html">интерактив</a>
       </nav>
     </header>
-    <main>
-      <section class="screen-1">
-        <h1>СТЭШ</h1>
-      </section>
-      <section class="screen-2">
-        <h3>О ПРОЕКТЕ</h3>
-        <p>
-          архив старого интернета. место, в котором собраны артефакты прошлого:
-          сайты, культовые моменты, интерфейсы, игры, гифки, мемы и многое
-          другое. мы собираем фрагменты прошлого и создаем из них портал в мир
-          забытого интернета, чтобы вспомнить, какой была сеть до фильтров,
-          алгоритмов и перенасыщения контентом, и чтобы немного заглянуть туда,
-          куда уже не заходят.
-        </p>
-      </section>
-    </main>
+    <article class="W_Index">
+      <main class="S_Index">
+        <section class="W_VideoCover" id="videoCover">
+          <video
+            src="./videos/stash.mp4"
+            autoplay
+            playsinline
+            muted
+            loop
+          ></video>
+          <img src="./images/start-line.webp" alt="" class="start-line" />
+        </section>
+        <section class="S_IndexInfo">
+          <div class="O_IndexAboutProject">
+            <div class="M_MiniWindow">
+              <h1>О ПРОЕКТЕ</h1>
+              <p></p>
+              <p>
+                архив старого интернета. место, в котором собраны артефакты
+                прошлого: сайты, культовые моменты, интерфейсы, игры, гифки,
+                мемы и многое другое. мы собираем фрагменты прошлого и создаем
+                из них портал в мир забытого интернета, чтобы вспомнить, какой
+                была сеть до фильтров, алгоритмов и перенасыщения контентом, и
+                чтобы немного заглянуть туда, куда уже не заходят.
+              </p>
+            </div>
+            <img src="./images/pic-chick.webp" alt="" class="pic-chick" />
+          </div>
+          <div class="O_IndexAboutArchive">
+            <div class="M_NavigationIcons"></div>
+            <div class="M_SmallNote"></div>
+          </div>
+          <div class="O_IndexCalendar">
+            <div class="A_IndexCalendar"></div>
+          </div>
+          <div class="O_IndexGallery"></div>
+        </section>
+      </main>
+    </article>
     <footer>
       <div class="socials-icons">
         <a href="https://vk.com/archive_stash?from=groups" target="_blank">
