--- a/src/pages/interact/games.html
+++ b/src/pages/interact/games.html
@@ -6,6 +6,7 @@
     <title>игры</title>
   </head>
   <body>
+    <div class="W_TestPage">
         <header>
       <nav>
         <a href="../../index.html">на главную</a>
@@ -57,6 +58,7 @@
         <p id="my-form-status"></p>
       </form>
     </footer>
+    </div>
     <script>
       var form = document.getElementById('my-form')
 
