--- a/src/pages/interact/tests.html
+++ b/src/pages/interact/tests.html
@@ -6,59 +6,65 @@
     <title>тесты</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="../../index.html">на главную</a>
-        <a href="../about.html">о медиа</a>
-        <a href="../aboutUs.html">о нас</a>
-        <a href="../articles.html">cтатьи</a>
-        <a href="../archive.html">архив</a>
-        <a href="../interact.html">интерактив </a>
-      </nav>
-    </header>
-    <main>
-      <h1>тесты</h1>
-      <nav class="int-links">
-        <a href="tests/test1.html">тест 1</a>
-      </nav>
-    </main>
-    <footer>
-      <div class="socials-icons">
-        <a href="https://vk.com/archive_stash?from=groups" target="_blank">
-          <img
-            src="../../images/vk-icon.webp"
-            alt="vk"
-            class="vk"
-            width="100px"
-          />
-        </a>
-        <a
-          href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
-          target="_blank"
-        >
-          <img
-            src="../../images/inst-icon.webp"
-            alt="inst"
-            class="inst"
-            width="100px"
-          />
-        </a>
-        <a href="https://t.me/oldweb_core" target="_blank">
-          <img
-            src="../../images/tg-icon.webp"
-            alt="tgg"
-            class="tgg"
-            width="100px"
-          />
-        </a>
-      </div>
+    <div class="W_TestPage">
+      <header>
+        <nav>
+          <a href="../../index.html">на главную</a>
+          <a href="../about.html">о медиа</a>
+          <a href="../aboutUs.html">о нас</a>
+          <a href="../articles.html">cтатьи</a>
+          <a href="../archive.html">архив</a>
+          <a href="../interact.html">интерактив </a>
+        </nav>
+      </header>
+      <main>
+        <h1>тесты</h1>
+        <nav class="int-links">
+          <a href="tests/test1.html">тест 1</a>
+        </nav>
+      </main>
+      <footer>
+        <div class="socials-icons">
+          <a href="https://vk.com/archive_stash?from=groups" target="_blank">
+            <img
+              src="../../images/vk-icon.webp"
+              alt="vk"
+              class="vk"
+              width="100px"
+            />
+          </a>
+          <a
+            href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
+            target="_blank"
+          >
+            <img
+              src="../../images/inst-icon.webp"
+              alt="inst"
+              class="inst"
+              width="100px"
+            />
+          </a>
+          <a href="https://t.me/oldweb_core" target="_blank">
+            <img
+              src="../../images/tg-icon.webp"
+              alt="tgg"
+              class="tgg"
+              width="100px"
+            />
+          </a>
+        </div>
 
-      <form id="my-form" action="https://formspree.io/f/mldpkdbz" method="POST">
-        <input type="text" name="message" placeholder="tg user" />
-        <button id="my-form-button">отправить</button>
-        <p id="my-form-status"></p>
-      </form>
-    </footer>
+        <form
+          id="my-form"
+          action="https://formspree.io/f/mldpkdbz"
+          method="POST"
+        >
+          <input type="text" name="message" placeholder="tg user" />
+          <button id="my-form-button">отправить</button>
+          <p id="my-form-status"></p>
+        </form>
+      </footer>
+    </div>
     <script>
       var form = document.getElementById('my-form')
 
