--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -35,54 +35,67 @@
     <title>интерактивная зона</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="../index.html">на главную</a>
-        <a href="about.html">о медиа</a>
-        <a href="aboutUs.html">о нас</a>
-        <a href="articles.html">cтатьи</a>
-        <a href="archive.html">архив</a>
-        <a href="interact.html">интерактив</a>
-      </nav>
-    </header>
-    <main>
-      <h1>интерактивная зона</h1>
-      <nav class="int-links">
-        <a href="interact/games.html">к играм</a>
-        <a href="interact/tests.html">к тестам</a>
-      </nav>
-    </main>
-    <footer>
-      <div class="socials-icons">
-        <a href="https://vk.com/archive_stash?from=groups" target="_blank">
-          <img src="../images/vk-icon.webp" alt="vk" class="vk" width="100px" />
-        </a>
-        <a
-          href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
-          target="_blank"
+    <div class="W_TestPage">
+      <header>
+        <nav>
+          <a href="../index.html">на главную</a>
+          <a href="about.html">о медиа</a>
+          <a href="aboutUs.html">о нас</a>
+          <a href="articles.html">cтатьи</a>
+          <a href="archive.html">архив</a>
+          <a href="interact.html">интерактив</a>
+        </nav>
+      </header>
+      <article class="W_Interact">
+        <main>
+          <h1>интерактивная зона</h1>
+          <nav class="int-links">
+            <a href="interact/games.html">к играм</a>
+            <a href="interact/tests.html">к тестам</a>
+          </nav>
+        </main>
+      </article>
+      <footer>
+        <div class="socials-icons">
+          <a href="https://vk.com/archive_stash?from=groups" target="_blank">
+            <img
+              src="../images/vk-icon.webp"
+              alt="vk"
+              class="vk"
+              width="100px"
+            />
+          </a>
+          <a
+            href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
+            target="_blank"
+          >
+            <img
+              src="../images/inst-icon.webp"
+              alt="inst"
+              class="inst"
+              width="100px"
+            />
+          </a>
+          <a href="https://t.me/oldweb_core" target="_blank">
+            <img
+              src="../images/tg-icon.webp"
+              alt="tgg"
+              class="tgg"
+              width="100px"
+            />
+          </a>
+        </div>
+        <form
+          id="my-form"
+          action="https://formspree.io/f/mldpkdbz"
+          method="POST"
         >
-          <img
-            src="../images/inst-icon.webp"
-            alt="inst"
-            class="inst"
-            width="100px"
-          />
-        </a>
-        <a href="https://t.me/oldweb_core" target="_blank">
-          <img
-            src="../images/tg-icon.webp"
-            alt="tgg"
-            class="tgg"
-            width="100px"
-          />
-        </a>
-      </div>
-      <form id="my-form" action="https://formspree.io/f/mldpkdbz" method="POST">
-        <input type="text" name="message" placeholder="tg user" />
-        <button id="my-form-button">отправить</button>
-        <p id="my-form-status"></p>
-      </form>
-    </footer>
+          <input type="text" name="message" placeholder="tg user" />
+          <button id="my-form-button">отправить</button>
+          <p id="my-form-status"></p>
+        </form>
+      </footer>
+    </div>
     <script>
       var form = document.getElementById('my-form')
 
